Fix long links css issue on mobile

--- a/apps/userve/src/styles/global.scss
+++ b/apps/userve/src/styles/global.scss
@@ -14,7 +14,7 @@
   li {
     color: #72809d;
     a {
-      @apply font-semibold text-navy hover:underline;
+      @apply font-semibold text-navy hover:underline break-all;
     }
   }
   nav {
